--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 AUTH_SECRET=<any>
-AUTH_GITHUB_ID=somethig.something
-AUTH_GITHUB_SECRET=biglongstring
+AUTH_GITHUB_ID=Iv1.64e2d708dcbef69a
+AUTH_GITHUB_SECRET=f65e11f8deb08861f5e6da5a2e118feb64b282f9
 DATABASE_URL=postgres://mypostgresconnectionstring
